--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ dnspython==2.2.0
 email-validator==1.1.3
 Flask==2.0.2
 Flask-Cors==3.0.10
+Flask-Login==0.5.0
 flask-mongoengine==1.0.0
 Flask-WTF==1.0.0
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.0
 importlib-resources==5.4.0
